# c3engine-wasm

./: CMakeLists.txt
.github/workflows/: build.yml
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  book.cpp  book.h  eval.cpp  eval.h  history.cpp  history.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
